# FBF-Optics

./: .anjuta_sym_db.db  .gitignore  .gitignore~  Doxyfile  FBF_Optics  Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  data.txt  plot.R  spr.eps  spr.sh  spr.xml  spr_49_nosam.eps  testdata.txt
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Anisolayer.hpp  anisolayer.hpp  base_layer.hpp  complex_methods.hpp  ewe.hpp  fbfoptics.h  fbfoptics.hpp  isolayer.hpp  layer.hpp  spr.h  spr.hpp  sprloopsave  xmlparse.hpp
src/: anisolayer.cc  base_layer.cc  fbfoptics.c  fbfoptics.cc  isolayer.cc  layer.cc  main.cc  main.cc~  spr.c  spr.cc  timer.c  xmlparse.cc
src/.deps/: main.Po
